# speckle-archicad

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  generate_project_25.bat  generate_project_26.bat  generate_project_27.bat  generate_project_28.bat
.config/: dotnet-tools.json
.github/: pull_request_template.md
.github/workflows/: build.yml
AddOns/Speckle/: CMakeLists.txt
AddOns/Speckle/Sources/AddOn/: AddOnMain.cpp  BrowserPalette.cpp  BrowserPalette.hpp
AddOns/Speckle/Sources/AddOn/Browser/: ArchiCadBrowserAdapter.cpp  ArchiCadBrowserAdapter.h  BrowserPalette.cpp  BrowserPalette.h  IBrowserAdapter.h
AddOns/Speckle/Sources/AddOn/Connector/: AccountDatabase.cpp  AccountDatabase.h  BaseObjectSerializer.cpp  BaseObjectSerializer.h  Binding.cpp  Binding.h  Connector.cpp  Connector.h  Event.h  HostAppEvents.h  IAccountDatabase.h  IModelCardDatabase.h  InvalidMethodNameException.h  ModelCardDatabase.cpp  ModelCardDatabase.h  RootObjectBuilder.cpp  RootObjectBuilder.h  RunMethodEventArgs.h
AddOns/Speckle/Sources/AddOn/Connector/Bridges/: AccountBridge.cpp  AccountBridge.h  BaseBridge.cpp  BaseBridge.h  BrowserBridge.cpp  BrowserBridge.h  ConfigBridge.cpp  ConfigBridge.h  SelectionBridge.cpp  SelectionBridge.h  SendBridge.cpp  SendBridge.h  TestBridge.cpp  TestBridge.h
AddOns/Speckle/Sources/AddOn/Converter/: ARGBColorConverter.cpp  ARGBColorConverter.h  ArchiCadApiException.h  CheckError.h  ConverterUtils.cpp  ConverterUtils.h  ElementTypeToStringConverter.cpp  ErrorMessages.cpp  ErrorMessages.h  SpeckleConversionException.h
AddOns/Speckle/Sources/AddOn/Converter/HostToSpeckle/: GetElementBody.cpp  GetElementBodyWithModelAccess.cpp  GetElementLevel.cpp  GetElementType.cpp  GetHostAppReleaseInfo.cpp  GetModelMaterial.cpp  GetProjectInfo.cpp  GetSelection.cpp  HostToSpeckleConverter.cpp  HostToSpeckleConverter.h  IHostToSpeckleConverter.h
AddOns/Speckle/Sources/AddOn/Converter/SpeckleToHost/: ISpeckleToHostConverter.h  SetSelection.cpp  ShowAllIn3D.cpp  SpeckleToHostConverter.h
AddOns/Speckle/Sources/AddOn/DataTypes/: AfterSendObjectsArgs.cpp  AfterSendObjectsArgs.h  ConversionError.cpp  ConversionError.h  ElementBody.cpp  ElementBody.h  ElementTypeCollection.cpp  ElementTypeCollection.h  ErrorReport.cpp  ErrorReport.h  Level.cpp  Level.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  ModelElement.cpp  ModelElement.h  ProjectInfo.cpp  ProjectInfo.h  RenderMaterialProxy.cpp  RenderMaterialProxy.h  RootObject.cpp  RootObject.h  SendConversionResult.cpp  SendConversionResult.h  SendFilter.cpp  SendFilter.h  SendModelCard.cpp  SendModelCard.h  SendViaBrowserArgs.cpp  SendViaBrowserArgs.h  ToastNotification.cpp  ToastNotification.h
AddOns/Speckle/Sources/AddOn/Storage/: ArchiCadDataStorage.cpp  ArchiCadDataStorage.h  IDataStorage.h
AddOns/Speckle/Sources/AddOn/Utils/: Base64GuidGenerator.cpp  Base64GuidGenerator.h  Debug.cpp  Debug.h  ElementTypeToStringConverter.cpp  ElementTypeToStringConverter.h  GuidGenerator.cpp  GuidGenerator.h  ILogger.h  JsonFileWriter.cpp  JsonFileWriter.h  Logger.cpp  Logger.h  LoggerFactory.cpp  LoggerFactory.h  StopWatch.cpp  StopWatch.h  Utils.cpp  Utils.h
AddOns/Speckle/Sources/AddOnResources/RFIX/: AddOnFix.grc
AddOns/Speckle/Sources/AddOnResources/RINT/: AddOn.grc
Libs/acapi25/Support/Inc/: ACAPinc.h  APIdefs.h  APIdefs_3D.h  APIdefs_ActionCenter.hpp  APIdefs_AnalyticalModel.h  APIdefs_Attributes.h  APIdefs_Automate.h  APIdefs_Base.h  APIdefs_Callback.h  APIdefs_Component.h  APIdefs_Database.h  APIdefs_ElementDifferenceGenerator.h  APIdefs_Elements.h  APIdefs_Environment.h  APIdefs_ErrorCodes.h  APIdefs_Favorite.h  APIdefs_Goodies.h  APIdefs_Interface.h  APIdefs_LibraryParts.h  APIdefs_ListData.h  APIdefs_MEP.h  APIdefs_ModulData.h  APIdefs_Navigator.h  APIdefs_Properties.h  APIdefs_Registration.h  APIdefs_TeamworkReserveInterface.h  MDIDs_APICD.h  MDIDs_Public.h
Libs/acapi26/Support/Inc/: ACAPinc.h  API_Guid.hpp  APIdefs_3D.h  APIdefs_ActionCenter.hpp  APIdefs_Attributes.h  APIdefs_Automate.h  APIdefs_Base.h  APIdefs_Callback.h  APIdefs_Component.h  APIdefs_Database.h  APIdefs_ElementDifferenceGenerator.h  APIdefs_Elements.h  APIdefs_Environment.h  APIdefs_ErrorCodes.h  APIdefs_Favorite.h  APIdefs_Goodies.h  APIdefs_IFC.h  APIdefs_Interface.h  APIdefs_LibraryParts.h  APIdefs_ListData.h  APIdefs_MEP.h  APIdefs_ModulData.h  APIdefs_Navigator.h  APIdefs_Properties.h  APIdefs_Registration.h  APIdefs_SurfaceType.h  APIdefs_TeamworkReserveInterface.h  MDIDs_APICD.h  MDIDs_Public.h
Libs/acapi26/Support/Tools/: CompileResources.py
Libs/acapi27/Support/Inc/: ACAPI_Automate.h  ACAPI_Database.h  ACAPI_Environment.h  ACAPI_Goodies.h  ACAPI_Interface.h  ACAPI_MigrationHeader.hpp  ACAPI_Navigator.h  ACAPinc.h  APICalls.h  API_AttributeIndexUtils.hpp  API_Guid.hpp  API_ValueWrappers.hpp  APIdefs.h  APIdefs_3D.h  APIdefs_ActionCenter.hpp  APIdefs_AttributeIndex.hpp  APIdefs_Attributes.h  APIdefs_Automate.h  APIdefs_Base.h  APIdefs_Callback.h  APIdefs_Component.h  APIdefs_Database.h  APIdefs_ElementDifferenceGenerator.h  APIdefs_Elements.h  APIdefs_Environment.h  APIdefs_ErrorCodes.h  APIdefs_Favorite.h  APIdefs_Goodies.h  APIdefs_IFC.h  APIdefs_Interface.h  APIdefs_LibraryParts.h  APIdefs_ListData.h  APIdefs_ModulData.h  APIdefs_Navigator.h  APIdefs_Properties.h  APIdefs_Registration.h  APIdefs_SurfaceType.h  APIdefs_TeamworkReserveInterface.h  APIdefs_ViewSettings.hpp  INavigatorCallbackInterface.hpp  (+1 more)
Libs/acapi28/Support/Inc/: ACAPI_Automate.h  ACAPI_Database.h  ACAPI_Environment.h  ACAPI_Goodies.h  ACAPI_Interface.h  ACAPI_Navigator.h  ACAPinc.h  APIdefs_3D.h  APIdefs_Attributes.h  APIdefs_Automate.h  APIdefs_Base.h  APIdefs_Callback.h  APIdefs_Database.h  APIdefs_Elements.h  APIdefs_Environment.h  APIdefs_Goodies.h  APIdefs_Interface.h  APIdefs_LibraryParts.h  APIdefs_ModulData.h  (+6 more)
Libs/json/: CMakeLists.txt
Libs/md5/: CMakeLists.txt
Libs/md5/include/: md5.h
Libs/md5/src/: md5.cpp
Libs/sha/: CMakeLists.txt
Libs/sha/src/: picosha2.cpp
Libs/sqlite/: CMakeLists.txt
ci-build/: Build.csproj  Consts.cs  Program.cs
(+1253 files in other folders)
